--- a/inventory/marira/Expiring Stock/ExpiringStock.jrxml
+++ b/inventory/marira/Expiring Stock/ExpiringStock.jrxml
@@ -71,7 +71,7 @@ ORDER BY item_name]]>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES CLINIC]]></text>
 			</staticText>
 		</band>
 	</title>
