--- a/inventory/marira/Low Stock/LowStock.jrxml
+++ b/inventory/marira/Low Stock/LowStock.jrxml
@@ -60,7 +60,7 @@ ORDER BY item_name]]>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
