--- a/inventory/marira/Stock Take/StockTake.jrxml
+++ b/inventory/marira/Stock Take/StockTake.jrxml
@@ -72,7 +72,7 @@ WHERE
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
