--- a/inventory/marira/Stockroom/Stockroom.jrxml
+++ b/inventory/marira/Stockroom/Stockroom.jrxml
@@ -123,7 +123,7 @@ ORDER BY i.name ASC;]]>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
