--- a/registration/marira/NewPatients/NewPatients.jrxml
+++ b/registration/marira/NewPatients/NewPatients.jrxml
@@ -34,7 +34,7 @@ ORDER BY pn.family_name]]>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
