--- a/registration/marira/PatientVisitsByAge/PatientVisitsByAge.jrxml
+++ b/registration/marira/PatientVisitsByAge/PatientVisitsByAge.jrxml
@@ -121,7 +121,7 @@ FROM
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
