--- a/registration/marira/PatientVisitList/PatientVisitList.jrxml
+++ b/registration/marira/PatientVisitList/PatientVisitList.jrxml
@@ -70,7 +70,7 @@ ORDER BY v.date_started, pn.family_name]]>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES MEMORIAL HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
