--- a/registration/marira/PatientVisitsByDistrict/PatientVisitsByDistrict.jrxml
+++ b/registration/marira/PatientVisitsByDistrict/PatientVisitsByDistrict.jrxml
@@ -40,7 +40,7 @@ GROUP BY a.county_district]]>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES MEMORIAL HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
