--- a/registration/marira/PatientVisitsByType/PatientVisitsByType.jrxml
+++ b/registration/marira/PatientVisitsByType/PatientVisitsByType.jrxml
@@ -38,7 +38,7 @@ GROUP BY vt.name]]>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES MEMORIAL HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
