--- a/registration/marira/Visit Diagnoses/Visit Diagnoses.jrxml
+++ b/registration/marira/Visit Diagnoses/Visit Diagnoses.jrxml
@@ -376,7 +376,7 @@ ORDER BY visit.date_started ASC]]>
 				<textElement textAlignment="Center">
 					<font size="24" isBold="true"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES MEMORIAL HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
