--- a/cashier/marira/Department Collections/DepartmentCollections.jrxml
+++ b/cashier/marira/Department Collections/DepartmentCollections.jrxml
@@ -37,7 +37,7 @@ FROM
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES MEMORIAL HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
