--- a/cashier/marira/Department Revenue/Department Revenue.jrxml
+++ b/cashier/marira/Department Revenue/Department Revenue.jrxml
@@ -54,7 +54,7 @@ GROUP BY d.Name]]>
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES MEMORIAL HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
