Update Outpatient Thermal Receipt.jrxml

--- a/cashier/marira/Outpatient Thermal Receipt/Outpatient Thermal Receipt.jrxml
+++ b/cashier/marira/Outpatient Thermal Receipt/Outpatient Thermal Receipt.jrxml
@@ -79,8 +79,8 @@ WHERE
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="10"/>
 				</textElement>
-				<text><![CDATA[St JAMES MEMORIAL
-HOSPITAL
+				<text><![CDATA[St JAMES MEMORIAL HOSPITAL
+ADDRESS: P.O.BOX 355
 BUTERE]]></text>
 			</staticText>
 			<textField>
