--- a/cashier/marira/Shift Summary/ShiftSummary.jrxml
+++ b/cashier/marira/Shift Summary/ShiftSummary.jrxml
@@ -22,7 +22,7 @@
 				<textElement textAlignment="Center">
 					<font size="24"/>
 				</textElement>
-				<text><![CDATA[AIC Marira Clinic]]></text>
+				<text><![CDATA[St JAMES MEMORIAL HOSPITAL]]></text>
 			</staticText>
 		</band>
 	</title>
